audio/spot/build-failure.txt
build-meson

error[E0583]: file not found for module `config`
  --> src/main.rs:18:1
   |
18 | mod config;
   | ^^^^^^^^^^^
   |
   = help: to create the module `config`, create file "src/config.rs" or "src/config/mod.rs"
   = note: if there is a `mod config` elsewhere in the crate already, import it with `use crate::...` instead

error[E0432]: unresolved import `config::VERSION`
  --> src/main.rs:22:9
   |
22 | pub use config::VERSION;
   |         ^^^^^^^^^^^^^^^ no `VERSION` in `config`

error[E0425]: cannot find value `LOCALEDIR` in module `config`
  --> src/main.rs:31:54
   |
31 |         .and_then(|_| bindtextdomain("spot", config::LOCALEDIR))
   |                                                      ^^^^^^^^^ not found in `config`

error[E0425]: cannot find value `APPID` in module `config`
  --> src/main.rs:37:54
   |
37 |     let gtk_app = gtk::Application::new(Some(config::APPID), ApplicationFlags::HANDLES_OPEN);
   |                                                      ^^^^^ not found in `config`

error[E0425]: cannot find value `PKGDATADIR` in module `config`
  --> src/main.rs:96:43
   |
96 |     let res = gio::Resource::load(config::PKGDATADIR.to_owned() + "/spot.gresource")
   |                                           ^^^^^^^^^^ not found in `config`

warning: unused import: `SpotifyResult`
 --> src/api/mod.rs:7:64
  |
7 | pub use cached_client::{CachedSpotifyClient, SpotifyApiClient, SpotifyResult};
  |                                                                ^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `song_actions::*`
 --> src/app/components/playlist/mod.rs:8:9
  |
8 | pub use song_actions::*;
  |         ^^^^^^^^^^^^^^^

warning: unused import: `pagination::*`
  --> src/app/state/mod.rs:17:9
   |
17 | pub use pagination::*;
   |         ^^^^^^^^^^^^^

Some errors have detailed explanations: E0425, E0432, E0583.
For more information about an error, try `rustc --explain E0425`.
warning: `spot` (bin "spot") generated 3 warnings
error: could not compile `spot` (bin "spot") due to 5 previous errors; 3 warnings emitted

Caused by:
  process didn't exit successfully: `/usr/local/bin/rustc --crate-name spot --edition=2018 src/main.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --diagnostic-width=100 --crate-type bin --emit=dep-info,link -C opt-level=2 -C embed-bitcode=no -C codegen-units=4 -C metadata=5f95d099ece797fb -C extra-filename=-5f95d099ece797fb --out-dir /usr/ports/pobj/spot-0.4.0/build-amd64/target/release/deps -L dependency=/usr/ports/pobj/spot-0.4.0/build-amd64/target/release/deps --extern async_std=/usr/ports/pobj/spot-0.4.0/build-amd64/target/release/deps/libasync_std-5994d6b50b4b6c0f.rlib --extern env_logger=/usr/ports/pobj/spot-0.4.0/build-amd64/target/release/deps/libenv_logger-5982d53cb45b588b.rlib --extern form_urlencoded=/usr/ports/pobj/spot-0.4.0/build-amd64/target/release/deps/libform_urlencoded-dcb4f00f021da6e6.rlib --extern futures=/usr/ports/pobj/spot-0.4.0/build-amd64/target/release/deps/libfutures-d0ea580ee3c545ab.rlib --extern gdk_pixbuf=/usr/ports/pobj/spot-0.4.0/build-amd64/target/release/deps/libgdk_pixbuf-c6533bbb0f48c64f.rlib --extern gdk=/usr/ports/pobj/spot-0.4.0/build-amd64/target/release/deps/libgdk4-bc3ef1e8e0b93a40.rlib --extern gettextrs=/usr/ports/pobj/spot-0.4.0/build-amd64/target/release/deps/libgettextrs-1f85ad41a5063a73.rlib --extern gio=/usr/ports/pobj/spot-0.4.0/build-amd64/target/release/deps/libgio-6f8b55f851edf132.rlib --extern glib=/usr/ports/pobj/spot-0.4.0/build-amd64/target/release/deps/libglib-48cd8c1ba32cc3ac.rlib --extern gtk=/usr/ports/pobj/spot-0.4.0/build-amd64/target/release/deps/libgtk4-263fba92f7e743a0.rlib --extern isahc=/usr/ports/pobj/spot-0.4.0/build-amd64/target/release/deps/libisahc-9b11676d777858af.rlib --extern lazy_static=/usr/ports/pobj/spot-0.4.0/build-amd64/target/release/deps/liblazy_static-531c9380e9b46db7.rlib --extern libadwaita=/usr/ports/pobj/spot-0.4.0/build-amd64/target/release/deps/liblibadwaita-b1fdcff435adc97f.rlib --extern librespot=/usr/ports/pobj/spot-0.4.0/build-amd64/target/release/deps/liblibrespot-300795e4d44a3680.rlib --extern log=/usr/ports/pobj/spot-0.4.0/build-amd64/target/release/deps/liblog-8c30e471ac2c6437.rlib --extern percent_encoding=/usr/ports/pobj/spot-0.4.0/build-amd64/target/release/deps/libpercent_encoding-21413da4f850669a.rlib --extern protobuf=/usr/ports/pobj/spot-0.4.0/build-amd64/target/release/deps/libprotobuf-348ff61429d531da.rlib --extern rand=/usr/ports/pobj/spot-0.4.0/build-amd64/target/release/deps/librand-072689191ce9d09c.rlib --extern ref_filter_map=/usr/ports/pobj/spot-0.4.0/build-amd64/target/release/deps/libref_filter_map-91ffa7b9196945fa.rlib --extern regex=/usr/ports/pobj/spot-0.4.0/build-amd64/target/release/deps/libregex-04249431c8386103.rlib --extern secret_service=/usr/ports/pobj/spot-0.4.0/build-amd64/target/release/deps/libsecret_service-bcb817d1d57051a7.rlib --extern serde=/usr/ports/pobj/spot-0.4.0/build-amd64/target/release/deps/libserde-7aa9cc42944f740e.rlib --extern serde_json=/usr/ports/pobj/spot-0.4.0/build-amd64/target/release/deps/libserde_json-7729e9640c4b516a.rlib --extern thiserror=/usr/ports/pobj/spot-0.4.0/build-amd64/target/release/deps/libthiserror-8f33de954996d888.rlib --extern tokio=/usr/ports/pobj/spot-0.4.0/build-amd64/target/release/deps/libtokio-9fc1cb942b44530e.rlib --extern zbus=/usr/ports/pobj/spot-0.4.0/build-amd64/target/release/deps/libzbus-6c4687fd5ad77040.rlib --extern zvariant=/usr/ports/pobj/spot-0.4.0/build-amd64/target/release/deps/libzvariant-f6aa73bd1fe1d8de.rlib -L native=/usr/local/lib -L native=/usr/local/lib -L native=/usr/local/lib -L native=/usr/local/lib -L native=/usr/local/lib -L native=/usr/local/lib -L native=/usr/X11R6/lib -L native=/usr/local/lib -L native=/usr/X11R6/lib -L native=/usr/local/lib -L native=/usr/X11R6/lib -L native=/usr/local/lib -L native=/usr/X11R6/lib -L native=/usr/local/lib -L native=/usr/local/lib -L native=/usr/local/lib -L native=/usr/X11R6/lib -L native=/usr/local/lib -L native=/usr/X11R6/lib -L native=/usr/local/lib -L native=/usr/ports/pobj/spot-0.4.0/build-amd64/target/release/build/libnghttp2-sys-924accd05258eda3/out/i/lib -L native=/usr/local/lib -L native=/usr/X11R6/lib -L native=/usr/local/lib -L native=/usr/local/lib` (exit status: 1)
